--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 [Ll]ib64
 [Ll]ocal
 [Ss]cripts
+[Tt]cl
+pyvenv.cfg
+.venv
+pip-selfcheck.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
